# contracts/openapi.json
@@ -329,12 +329,26 @@
             ],
             "title": "Scope Type",
             "type": "string"
+          },
+          "store_currency": {
+            "maxLength": 3,
+            "minLength": 3,
+            "title": "Store Currency",
+            "type": "string"
+          },
+          "store_timezone": {
+            "maxLength": 64,
+            "minLength": 1,
+            "title": "Store Timezone",
+            "type": "string"
           }
         },
         "required": [
           "api_key",
           "scope_type",
-          "scope_id"
+          "scope_id",
+          "store_timezone",
+          "store_currency"
         ],
         "title": "BumpaConnectionCreate",
         "type": "object"
@@ -416,6 +430,28 @@
           "status": {
             "title": "Status",
             "type": "string"
+          },
+          "store_currency": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Store Currency"
+          },
+          "store_timezone": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Store Timezone"
           }
         },
         "required": [
@@ -423,6 +459,8 @@
           "status",
           "scope_type",
           "scope_id_last4",
+          "store_timezone",
+          "store_currency",
           "provider",
           "last_successful_sync_at",
           "last_failed_sync_at",
@@ -1010,11 +1048,25 @@
             ],
             "title": "Scope Type",
             "type": "string"
+          },
+          "store_currency": {
+            "maxLength": 3,
+            "minLength": 3,
+            "title": "Store Currency",
+            "type": "string"
+          },
+          "store_timezone": {
+            "maxLength": 64,
+            "minLength": 1,
+            "title": "Store Timezone",
+            "type": "string"
           }
         },
         "required": [
           "api_key",
-          "scope_id"
+          "scope_id",
+          "store_timezone",
+          "store_currency"
         ],
         "title": "OnboardingBumpaRequest",
         "type": "object"
@@ -1040,6 +1092,14 @@
           "status": {
             "title": "Status",
             "type": "string"
+          },
+          "store_currency": {
+            "title": "Store Currency",
+            "type": "string"
+          },
+          "store_timezone": {
+            "title": "Store Timezone",
+            "type": "string"
           }
         },
         "required": [
@@ -1047,6 +1107,8 @@
           "provider",
           "scope_type",
           "scope_id_last4",
+          "store_timezone",
+          "store_currency",
           "status"
         ],
         "title": "OnboardingBumpaView",
@@ -1508,6 +1570,10 @@
       },
       "OnboardingTenantView": {
         "properties": {
+          "currency_code": {
+            "title": "Currency Code",
+            "type": "string"
+          },
           "id": {
             "title": "Id",
             "type": "string"
@@ -1523,13 +1589,19 @@
           "status": {
             "title": "Status",
             "type": "string"
+          },
+          "timezone": {
+            "title": "Timezone",
+            "type": "string"
           }
         },
         "required": [
           "id",
           "slug",
           "name",
-          "status"
+          "status",
+          "timezone",
+          "currency_code"
         ],
         "title": "OnboardingTenantView",
         "type": "object"
